adopt URLSession template

--- a/modules/openapi-generator/src/main/resources/swift5/libraries/urlsession/URLSessionImplementations.mustache
+++ b/modules/openapi-generator/src/main/resources/swift5/libraries/urlsession/URLSessionImplementations.mustache
@@ -210,6 +210,10 @@ private var credentialStore = SynchronizedDictionary<Int, URLCredential>()
 
             completion(.success(Response(response: httpResponse, body: () as! T)))
 
+        case is Data.Type:
+
+            completion(.success(Response(response: httpResponse, body: (data ?? Data()) as! T)))
+
         default:
             fatalError("Unsupported Response Body Type - \(String(describing: T.self))")
         }
