Add func formatErrorMessage

--- a/modules/openapi-generator/src/main/resources/go/api.mustache
+++ b/modules/openapi-generator/src/main/resources/go/api.mustache
@@ -360,7 +360,7 @@ func (a *{{{classname}}}Service) {{nickname}}Execute(r {{#structPrefix}}{{&class
 			error: localVarHTTPResponse.Status,
 		}
 		{{#responses}}
-		{{#dataType}}
+            {{#dataType}}
 		{{^is1xx}}
 		{{^is2xx}}
 		{{#range}}
@@ -386,6 +386,7 @@ func (a *{{{classname}}}Service) {{nickname}}Execute(r {{#structPrefix}}{{&class
 				return {{#returnType}}localVarReturnValue, {{/returnType}}localVarHTTPResponse, newErr
 			}
 			newErr.model = v
+            newErr.error = formatErrorMessage(localVarHTTPResponse.Status, &v)
 			{{^-last}}
 			return {{#returnType}}localVarReturnValue, {{/returnType}}localVarHTTPResponse, newErr
 			{{/-last}}
