--- a/modules/openapi-generator/src/main/resources/go/utils.mustache
+++ b/modules/openapi-generator/src/main/resources/go/utils.mustache
@@ -319,5 +319,5 @@ func (v *NullableTime) UnmarshalJSON(src []byte) error {
 }
 
 type MappedNullable interface {
-	ToMap() map[string]interface{}
+	ToMap() (map[string]interface{}, error)
 }
