--- a/modules/openapi-generator/src/main/resources/r/modelGeneric.mustache
+++ b/modules/openapi-generator/src/main/resources/r/modelGeneric.mustache
@@ -78,10 +78,14 @@
         stopifnot(is.logical(`{{name}}`), length(`{{name}}`) == 1)
         {{/isBoolean}}
         {{#isDate}}
-        stopifnot(is.character(`{{name}}`), length(`{{name}}`) == 1)
+        if (class(`{{name}}`) != "Date") {
+          stop(paste("Error! Invalid Date:", `{{name}}`))
+        }
         {{/isDate}}
         {{#isDateTime}}
-        stopifnot(is.character(`{{name}}`), length(`{{name}}`) == 1)
+        if (class(`{{name}}`) != "Date") {
+          stop(paste("Error! Invalid Date:", `{{name}}`))
+        }
         {{/isDateTime}}
         {{#isUri}}
         # to validate URL. ref: https://stackoverflow.com/questions/73952024/url-validation-in-r
@@ -134,10 +138,14 @@
         stopifnot(is.logical(`{{name}}`), length(`{{name}}`) == 1)
         {{/isBoolean}}
         {{#isDate}}
-        stopifnot(is.character(`{{name}}`), length(`{{name}}`) == 1)
+        if (class(`{{name}}`) != "Date") {
+          stop(paste("Error! Invalid Date:", `{{name}}`))
+        }
         {{/isDate}}
         {{#isDateTime}}
-        stopifnot(is.character(`{{name}}`), length(`{{name}}`) == 1)
+        if (class(`{{name}}`) != "Date") {
+          stop(paste("Error! Invalid Date:", `{{name}}`))
+        }
         {{/isDateTime}}
         {{#isUri}}
         # to validate URL. ref: https://stackoverflow.com/questions/73952024/url-validation-in-r
