fix: non simpleType but primitive response types.

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/api/deserialize.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/freezed/api/deserialize.mustache
@@ -11,18 +11,23 @@
         {{/returnTypeIsPrimitive}}
     {{/returnSimpleType}}
     {{^returnSimpleType}}
-        {{#isArray}}
-            {{#uniqueItems}}
-                final _responseDataAsSet = _response.data as List<dynamic>;
-                    _responseData = _responseDataAsSet.map<{{{returnBaseType}}}>((dynamic e)=> {{{returnBaseType}}}.fromJson(e as Map<String, dynamic>)).toSet();
-            {{/uniqueItems}}
-            {{^uniqueItems}}
-                    final _responseDataAsList = _response.data as List<dynamic>;
-                    _responseData = _responseDataAsList.map<{{{returnBaseType}}}>((dynamic e)=> {{{returnBaseType}}}.fromJson(e as Map<String, dynamic>)).toList();
-            {{/uniqueItems}}
-        {{/isArray}}
-        {{#isMap}}
-                _responseData = _response.data as Map<String, {{{returnBaseType}}}>;
-        {{/isMap}}
+        {{#returnTypeIsPrimitive}}
+            _responseData = _response.data as {{{returnType}}};
+        {{/returnTypeIsPrimitive}}
+        {{^returnTypeIsPrimitive}}
+            {{#isArray}}
+                {{#uniqueItems}}
+                    final _responseDataAsSet = _response.data as List<dynamic>;
+                        _responseData = _responseDataAsSet.map<{{{returnBaseType}}}>((dynamic e)=> {{{returnBaseType}}}.fromJson(e as Map<String, dynamic>)).toSet();
+                {{/uniqueItems}}
+                {{^uniqueItems}}
+                        final _responseDataAsList = _response.data as List<dynamic>;
+                        _responseData = _responseDataAsList.map<{{{returnBaseType}}}>((dynamic e)=> {{{returnBaseType}}}.fromJson(e as Map<String, dynamic>)).toList();
+                {{/uniqueItems}}
+            {{/isArray}}
+            {{#isMap}}
+                    _responseData = _response.data as Map<String, {{{returnBaseType}}}>;
+            {{/isMap}}
+        {{/returnTypeIsPrimitive}}
     {{/returnSimpleType}}
 {{/isResponseFile}}
