fix: add correct files for analysis ignore

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/analysis_options.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/analysis_options.mustache
@@ -8,3 +8,7 @@ analyzer:
   exclude:
     - test/*.dart{{#useJsonSerializable}}
     - lib/src/model/*.g.dart{{/useJsonSerializable}}
+    {{#useFreezed}}
+    - lib/src/model/*.g.dart
+    - lib/src/model/*.freezed.dart
+    {{/useFreezed}}
