--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/api.mustache
@@ -3,12 +3,22 @@ package {{package}};
 {{#imports}}import {{import}};
 {{/imports}}
 
+
+{{#useJakartaEE}}
+import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.Response;
+{{/useJakartaEE}}
+{{^useJakartaEE}}
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
+{{/useJakartaEE}}
+
+
 
 {{#useSwaggerAnnotations}}
 import io.swagger.annotations.*;
 {{/useSwaggerAnnotations}}
+
 {{#supportAsync}}
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.CompletableFuture;
@@ -17,8 +27,19 @@ import java.util.concurrent.CompletableFuture;
 import java.io.InputStream;
 import java.util.Map;
 import java.util.List;
-{{#useBeanValidation}}import javax.validation.constraints.*;
-import javax.validation.Valid;{{/useBeanValidation}}
+
+{{#useBeanValidation}}
+    {{#useJakartaEE}}
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+    {{/useJakartaEE}}
+    {{^useJakartaEE}}
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+    {{/useJakartaEE}}
+{{/useBeanValidation}}
+
+
 
 @Path("{{commonPath}}"){{#useSwaggerAnnotations}}
 @Api(description = "the {{{baseName}}} API"){{/useSwaggerAnnotations}}{{#hasConsumes}}
