--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/generatedAnnotation.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/generatedAnnotation.mustache
@@ -1,1 +1,7 @@
+
+{{#useJakartaEE}}
+@jakarta.annotation.Generated(value = "{{generatorClass}}"{{^hideGenerationTimestamp}}, date = "{{generatedDate}}"{{/hideGenerationTimestamp}})
+{{/useJakartaEE}}
+{{^useJakartaEE}}
 @javax.annotation.Generated(value = "{{generatorClass}}"{{^hideGenerationTimestamp}}, date = "{{generatedDate}}"{{/hideGenerationTimestamp}})
+{{/useJakartaEE}}
