--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/model.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/model.mustache
@@ -5,9 +5,17 @@ package {{package}};
 {{#serializableModel}}
 import java.io.Serializable;
 {{/serializableModel}}
+
+
 {{#useBeanValidation}}
-import javax.validation.constraints.*;
+    {{#useJakartaEE}}
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+    {{/useJakartaEE}}
+    {{^useJakartaEE}}
 import javax.validation.Valid;
+import javax.validation.constraints.*;
+    {{/useJakartaEE}}
 {{/useBeanValidation}}
 
 {{#models}}
