--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/pom.mustache
@@ -89,11 +89,20 @@
       <artifactId>joda-time</artifactId>
       <version>${joda-version}</version>
     </dependency>
+{{#useJakartaEE}}
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta.annotation-api-version}</version>
+    </dependency>
+{{/useJakartaEE}}
+{{^useJakartaEE}}
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>${javax.annotation-api-version}</version>
     </dependency>
+{{/useJakartaEE}}
     {{#useSwaggerAnnotations}}
     <dependency>
       <groupId>io.swagger</groupId>
@@ -155,9 +164,10 @@
     <junit-version>4.13.2</junit-version>
     <joda-version>2.10.13</joda-version>
     <javax.annotation-api-version>1.3.2</javax.annotation-api-version>
+    <jakarta.annotation-api-version>2.1.1</jakarta.annotation-api-version>
 {{#useBeanValidation}}
-    <beanvalidation-version>2.0.2</beanvalidation-version>
+    <beanvalidation-version>3.0.2</beanvalidation-version>
 {{/useBeanValidation}}
-    <jakarta.ws.rs-version>2.1.6</jakarta.ws.rs-version>
+    <jakarta.ws.rs-version>3.1.0</jakarta.ws.rs-version>
   </properties>
 </project>
