use replace instead of replaceAll

--- a/modules/openapi-generator/src/main/resources/Java/libraries/okhttp-gson/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/okhttp-gson/ApiClient.mustache
@@ -1736,7 +1736,7 @@ public class ApiClient {
                 if (entry.getKey().equals(param.getName())) {
                     switch (param.getIn()) {
                         case "path":
-                            path = path.replaceAll("\\{" + param.getName() + "\\}", escapeString(value.toString()));
+                            path = path.replace("{" + param.getName() + "}", escapeString(value.toString()));
                             break;
                         case "query":
                             if (value instanceof Collection<?>) {
