add oneof, anyof support

--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -279,9 +279,7 @@ class ApiClient(object):
             # and attributes which value is not None.
             # Convert attribute name to json key in
             # model definition for request.
-            obj_dict = {obj.attribute_map[attr]: getattr(obj, attr)
-                        for attr, _ in six.iteritems(obj.openapi_types)
-                        if getattr(obj, attr) is not None}
+            obj_dict = obj.dict(by_alias=True)
 
         return {key: self.sanitize_for_serialization(val)
                 for key, val in six.iteritems(obj_dict)}
