--- a/modules/openapi-generator/src/main/resources/python-nextgen/README_onlypackage.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/README_onlypackage.mustache
@@ -26,7 +26,6 @@ This python library package is generated without supporting files like setup.py 
 To be able to use it, you will need these dependencies in your own package that uses this library:
 
 * urllib3 >= 1.25.3
-* six >= 1.10
 * python-dateutil
 {{#asyncio}}
 * aiohttp
@@ -34,6 +33,8 @@ To be able to use it, you will need these dependencies in your own package that 
 {{#tornado}}
 * tornado>=4.2,<5
 {{/tornado}}
+* pydantic
+* aenum
 
 ## Getting Started
 
