--- a/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
@@ -6,9 +6,6 @@ from __future__ import absolute_import
 
 import re  # noqa: F401
 
-# python 2 and python 3 compatibility library
-import six
-
 from pydantic import validate_arguments, ValidationError
 from typing_extensions import Annotated
 from {{packageName}} import models
@@ -159,7 +156,7 @@ class {{classname}}(object):
             ]
         )
 
-        for key, val in six.iteritems(local_var_params['kwargs']):
+        for key, val in local_var_params['kwargs'].items():
             if key not in all_params{{#servers.0}} and key != "_host_index"{{/servers.0}}:
                 raise ApiTypeError(
                     "Got an unexpected keyword argument '%s'"
