--- a/modules/openapi-generator/src/main/resources/python-nextgen/configuration.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/configuration.mustache
@@ -12,8 +12,7 @@ import multiprocessing
 import sys
 import urllib3
 
-import six
-from six.moves import http_client as httplib
+import http.client as httplib
 from {{packageName}}.exceptions import ApiValueError
 
 
@@ -392,7 +391,7 @@ conf = {{{packageName}}}.Configuration(
             # then add file handler and remove stream handler.
             self.logger_file_handler = logging.FileHandler(self.__logger_file)
             self.logger_file_handler.setFormatter(self.logger_formatter)
-            for _, logger in six.iteritems(self.logger):
+            for _, logger in self.logger.items():
                 logger.addHandler(self.logger_file_handler)
 
     @property
@@ -414,14 +413,14 @@ conf = {{{packageName}}}.Configuration(
         self.__debug = value
         if self.__debug:
             # if debug status is True, turn on debug logging
-            for _, logger in six.iteritems(self.logger):
+            for _, logger in self.logger.items():
                 logger.setLevel(logging.DEBUG)
             # turn on httplib debug
             httplib.HTTPConnection.debuglevel = 1
         else:
             # if debug status is False, turn off debug logging,
             # setting log level to default `logging.WARNING`
-            for _, logger in six.iteritems(self.logger):
+            for _, logger in self.logger.items():
                 logger.setLevel(logging.WARNING)
             # turn off httplib debug
             httplib.HTTPConnection.debuglevel = 0
