--- a/modules/openapi-generator/src/main/resources/python-nextgen/exceptions.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/exceptions.mustache
@@ -2,9 +2,6 @@
 
 {{>partial_header}}
 
-import six
-
-
 class OpenApiException(Exception):
     """The base exception class for all OpenAPIExceptions"""
 
@@ -148,7 +145,7 @@ def render_path(path_to_item):
     """Returns a string representation of a path"""
     result = ""
     for pth in path_to_item:
-        if isinstance(pth, six.integer_types):
+        if isinstance(pth, int):
             result += "[{0}]".format(pth)
         else:
             result += "['{0}']".format(pth)
