--- a/modules/openapi-generator/src/main/resources/python-nextgen/rest.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/rest.mustache
@@ -10,9 +10,7 @@ import logging
 import re
 import ssl
 
-# python 2 and python 3 compatibility library
-import six
-from six.moves.urllib.parse import urlencode
+from urllib.parse import urlencode, quote_plus
 import urllib3
 
 from {{packageName}}.exceptions import ApiException, UnauthorizedException, ForbiddenException, NotFoundException, ServiceException, ApiValueError
@@ -128,7 +126,7 @@ class RESTClientObject(object):
 
         timeout = None
         if _request_timeout:
-            if isinstance(_request_timeout, six.integer_types + (float, )):  # noqa: E501,F821
+            if isinstance(_request_timeout, (int,float)):  # noqa: E501,F821
                 timeout = urllib3.Timeout(total=_request_timeout)
             elif (isinstance(_request_timeout, tuple) and
                   len(_request_timeout) == 2):
