--- a/modules/openapi-generator/src/main/resources/python-nextgen/setup.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/setup.mustache
@@ -16,7 +16,7 @@ VERSION = "{{packageVersion}}"
 # prerequisite: setuptools
 # http://pypi.python.org/pypi/setuptools
 
-REQUIRES = ["urllib3 >= 1.25.3", "six >= 1.10", "python-dateutil"]
+REQUIRES = ["urllib3 >= 1.25.3", "python-dateutil", "pydantic", "aenum"]
 {{#asyncio}}
 REQUIRES.append("aiohttp >= 3.0.0")
 {{/asyncio}}
