--- a/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
@@ -159,38 +159,46 @@ class {{classname}}(object):
 
         path_params = {}
 {{#pathParams}}
-        if '{{paramName}}' in local_var_params:
-            path_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}}  # noqa: E501
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}  # noqa: E501
+        if local_var_params['{{paramName}}']:
+            path_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}}
+            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/pathParams}}
 
         query_params = []
 {{#queryParams}}
         if local_var_params.get('{{paramName}}') is not None:  # noqa: E501
-            query_params.append(('{{baseName}}', local_var_params['{{paramName}}'])){{#isArray}}  # noqa: E501
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}  # noqa: E501
+            query_params.append(('{{baseName}}', local_var_params['{{paramName}}'])){{#isArray}}
+            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/queryParams}}
 
         header_params = dict(local_var_params.get('_headers', {}))
 {{#headerParams}}
-        if '{{paramName}}' in local_var_params and local_var_params['{{paramName}}']:
-            header_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}} # noqa: E501
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}  # noqa: E501
+        if local_var_params['{{paramName}}']:
+            header_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}}
+            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/headerParams}}
 
         form_params = []
         local_var_files = {}
 {{#formParams}}
-        if '{{paramName}}' in local_var_params and local_var_params['{{paramName}}']:
-            {{^isFile}}form_params.append(('{{baseName}}', local_var_params['{{paramName}}'])){{/isFile}}{{#isFile}}local_var_files['{{baseName}}'] = local_var_params['{{paramName}}']{{/isFile}}{{#isArray}}  # noqa: E501
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}  # noqa: E501
+        if local_var_params['{{paramName}}']:
+            {{^isFile}}
+            form_params.append(('{{baseName}}', local_var_params['{{paramName}}']))
+            {{/isFile}}
+            {{#isFile}}
+            local_var_files['{{baseName}}'] = local_var_params['{{paramName}}']
+            {{/isFile}}
+            {{#isArray}}
+            collection_formats['{{baseName}}'] = '{{collectionFormat}}'
+            {{/isArray}}
 {{/formParams}}
 
         body_params = None
 {{#bodyParam}}
-        if '{{paramName}}' in local_var_params:
+        if local_var_params['{{paramName}}']:
             body_params = local_var_params['{{paramName}}']
 {{/bodyParam}}
+
         {{#hasProduces}}
         # HTTP header `Accept`
         header_params['Accept'] = self.api_client.select_header_accept(
