support discriminator mapping

--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -694,28 +694,5 @@ class ApiClient(object):
         :param klass: class literal.
         :return: model object.
         """
-        has_discriminator = False
-        if (hasattr(klass, 'get_real_child_model')
-                and klass.discriminator_value_class_map):
-            has_discriminator = True
 
-        #if not klass.openapi_types and has_discriminator is False:
-        #    return data
-
-        #kwargs = {}
-        #if (data is not None and
-        #        klass.openapi_types is not None and
-        #        isinstance(data, (list, dict))):
-        #    for attr, attr_type in klass.openapi_types.items:
-        #        if klass.attribute_map[attr] in data:
-        #            value = data[klass.attribute_map[attr]]
-        #            kwargs[attr] = self.__deserialize(value, attr_type)
-
-        #instance = klass(**kwargs)
-        instance = klass.from_dict(data)
-
-        #if has_discriminator:
-        #    klass_name = instance.get_real_child_model(data)
-        #    if klass_name:
-        #        instance = self.__deserialize(data, klass_name)
-        return instance
+        return klass.from_dict(data)
