--- a/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/model_generic.mustache
@@ -5,6 +5,10 @@ except ImportError:
     from inspect import getargspec as getfullargspec
 import pprint
 import re  # noqa: F401
+{{#discriminator}}
+import {{{modelPackage}}}
+import json
+{{/discriminator}}
 
 {{#vendorExtensions.x-py-import-models}}
 from {{packageName}} import models
@@ -26,21 +30,26 @@ class {{classname}}({{#parent}}models.{{{.}}}{{/parent}}{{^parent}}BaseModel{{/p
     class Config:
         allow_population_by_field_name = True
         validate_assignment = True
-{{#discriminator}}
 
+{{#discriminator}}
+    # JSON field name that stores the object type
+    __discriminator_property_name = '{{discriminator.propertyBaseName}}'
+
+    # discriminator mappings
     __discriminator_value_class_map = {
 {{#children}}
         '{{^vendorExtensions.x-discriminator-value}}{{name}}{{/vendorExtensions.x-discriminator-value}}{{#vendorExtensions.x-discriminator-value}}{{{vendorExtensions.x-discriminator-value}}}{{/vendorExtensions.x-discriminator-value}}': '{{{classname}}}'{{^-last}},{{/-last}}
 {{/children}}
     }
-{{/discriminator}}
 
-{{#discriminator}}
-    def get_real_child_model(self, data):
-        """Returns the real base class specified by the discriminator"""
-        discriminator_key = self.attribute_map[self.discriminator]
-        discriminator_value = data[discriminator_key]
-        return self.__discriminator_value_class_map.get(discriminator_value)
+    @classmethod
+    def get_discriminator_value(cls, obj: dict) -> str:
+        """Returns the discriminator value (object type) of the data"""
+        discriminator_value = obj[cls.__discriminator_property_name]
+        if discriminator_value:
+            return cls.__discriminator_value_class_map.get(discriminator_value)
+        else:
+            return None
 
 {{/discriminator}}
     def to_str(self) -> str:
@@ -54,13 +63,32 @@ class {{classname}}({{#parent}}models.{{{.}}}{{/parent}}{{^parent}}BaseModel{{/p
     @classmethod
     def from_json(cls, json_str: str) -> {{{classname}}}:
         """Create an instance of {{{classname}}} from a JSON string"""
+        {{#discriminator}}
+        return cls.from_dict(json.loads(json_str))
+        {{/discriminator}}
+        {{^discriminator}}
         return {{{classname}}}.parse_raw(json_str)
+        {{/discriminator}}
 
     def to_dict(self):
         """Returns the dictionary representation of the model using alias"""
         return self.dict(by_alias=True, exclude_none=True)
 
     @classmethod
-    def from_dict(cls, dict: dict) -> {{{classname}}}:
+    def from_dict(cls, obj: dict) -> {{{classname}}}:
         """Create an instance of {{{classname}}} from a dict"""
-        return {{{classname}}}.parse_obj(dict)
+        {{#discriminator}}
+        # look up the object type based on discriminator mapping
+        object_type = cls.get_discriminator_value(obj)
+        if object_type:
+            klass = getattr({{modelPackage}}, object_type)
+            return klass.from_dict(obj)
+        else:
+            raise ValueError("{{{classname}}} failed to lookup discriminator value from " +
+                             json.dumps(obj) + ". Discriminator property name: " + cls.__discriminator_property_name +
+                             ", mapping: " + json.dumps(cls.__discriminator_value_class_map))
+        {{/discriminator}}
+        {{^discriminator}}
+        return {{{classname}}}.parse_obj(obj)
+        {{/discriminator}}
+
